--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="manifest.json">
-    <title>PWA Sample</title>
-</head>
+    <head>
+        <title>PWA Sample</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- manifestの紐づけ -->
+        <link rel="manifest" href="manifest.json">
+        <!-- ServiceWorkerの登録 -->
+        <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service_worker.js')
+              .then((reg) => {
+                console.log('Service worker registered.', reg);
+              });
+        }
+        </script>
+    </head>
 <bidy>
 
 hello world
