--- a/online.html
+++ b/online.html
@@ -6,10 +6,7 @@
 </head>
 <bidy>
 
-
-<a href="offline.html">OFFLINE‚ÅŠJ‚¯‚é</a><br><br><br>
-<a href="online.html">OFFLINE‚ÅŠJ‚¯‚È‚¢</a>
-
+ONLINE
 
 </bidy>
 </html>
