--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
+
+    <script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js')
+          .then((reg) => {
+            console.log('Service worker registered.', reg);
+          });
+    }
+    </script>
+
+
+
     <title>PWA Sample</title>
 </head>
 <bidy>
