--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js')
+        navigator.serviceWorker.register('service_worker.js')
           .then((reg) => {
             console.log('Service worker registered.', reg);
           });
