--- a/onlinefake.html
+++ b/onlinefake.html
@@ -1,12 +1,12 @@
 <html>
-<head manifest="sample.appcache">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PWA Sample</title>
 </head>
 <bidy>
 
-ONLINE
+ONLINE ‚Å‚Í‚È‚¢‚Å‚·
 
 </bidy>
 </html>
