--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <title>PWA Sample</title>
 </head>
-<bidy>
+<body>
 
 
 <a href="offline.html">OFFLINEで開ける</a><br><br><br>
 <a href="online.html">OFFLINEで開けない</a>
 
 
-</bidy>
+</body>
 </html>
